--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -22,26 +22,7 @@ jobs:
       with:
         name: windows
         path: ${{github.workspace}}/build/Analyzers/Release/*.dll
-  macos:
-    runs-on: macos-latest
-    steps:
-    - uses: actions/checkout@v2
-    - name: Build
-      run: |
-        cmake -B ${{github.workspace}}/build/x86_64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_OSX_ARCHITECTURES=x86_64
-        cmake --build ${{github.workspace}}/build/x86_64
-        cmake -B ${{github.workspace}}/build/arm64 -DCMAKE_BUILD_TYPE=Release -DCMAKE_OSX_ARCHITECTURES=arm64
-        cmake --build ${{github.workspace}}/build/arm64
-    - name: Upload MacOS x86_64 build
-      uses: actions/upload-artifact@v2
-      with:
-        name: macos_x86_64
-        path: ${{github.workspace}}/build/x86_64/Analyzers/*.so
-    - name: Upload MacOS arm64 build
-      uses: actions/upload-artifact@v2
-      with:
-        name: macos_arm64
-        path: ${{github.workspace}}/build/arm64/Analyzers/*.so
+  
   linux:
     runs-on: ubuntu-latest
     steps:
@@ -59,7 +40,7 @@ jobs:
         name: linux
         path: ${{github.workspace}}/build/Analyzers/*.so
   publish:
-    needs: [windows, macos, linux]
+    needs: [windows, linux]
     runs-on: ubuntu-latest
     steps:
     - name: download individual builds
